test/corpus/comments.txt
==================
unpaired_comment
==================
<html>
  {# comment #}
  content

---

(template
  (content)
  (unpaired_comment)
  (content))


==================
unpaired_comment_with_template_code
==================
{# {{ variable }} {% statement %} {# comment #} no longer in comment content #}

---
(template
  (unpaired_comment)
  (content))

==================
unlabelled_paired_comment
==================
  {% comment %}
    content
  {% endcomment %}
---
(template
  (paired_comment (tag) (tag)))

==================
labelled_paired_comment
==================
  {% comment optional_label %}
    content
  {% endcomment %}
---
(template
  (paired_comment (tag (identifier)) (tag)))

==================
nested_paired_comments
==================
  {% comment optional_label %}
  {% comment %}
  {% comment optional_label %}
  {% endcomment %}
  {% endcomment %}
  {% endcomment %}
---

(template
  (paired_comment
    (tag (identifier))
    (paired_comment
      (tag)
      (paired_comment
        (tag (identifier))
        (tag))
      (tag))
    (tag)))
