test/corpus/expressions.txt
==================
variable_plain
==================
{{ variable }}
---
(template (variable (expression (identifier))))

==================
variable_path
==================
{{ variable.item1.item2 }}
---
(template (variable (expression (attribute_path (identifier) (identifier) (identifier)))))

==================
variable_basic_filter
==================
  {{ variable|filter }}
---
(template
  (variable
    (expression
      (identifier)
      (filter (identifier)))))

==================
variable_filter_with_arg
==================
  {{ variable|filter:argument }}
---
(template
  (variable
    (expression
    (identifier)
    (filter
      (identifier)
      (filter_argument (identifier))))))

==================
variable_filter_with_arg_path
==================
{{ variable|filter:argument.item1.item2 }}
---
(template
  (variable
    (expression
      (identifier)
      (filter
        (identifier)
        (filter_argument (attribute_path (identifier) (identifier) (identifier)))))))


==================
variable_filter_with_quoted_args
==================
{{ variable|filter:"quoted argument" }}
{{ variable|filter:"quoted argument, with non-word characters!" }}
---
(template
  (variable
    (expression
      (identifier)
      (filter
        (identifier)
        (filter_argument (string_literal)))))
  (variable
    (expression
      (identifier)
      (filter
        (identifier)
        (filter_argument (string_literal))))))

==================
variable_filter_with_everything
==================
{{ variable.attr1.attr2|filter|filter:argument|filter:argument.attr|filter:"quoted argument" }}
---
(template
  (variable
    (expression
      (attribute_path (identifier) (identifier) (identifier))
      (filter (identifier))
      (filter (identifier) (filter_argument (identifier)))
      (filter (identifier) (filter_argument (attribute_path (identifier) (identifier))))
      (filter (identifier) (filter_argument (string_literal))))))

==================
string
==================
{{ "string" }}
{{ 'string' }}
{{ "string with \"quotes\"" }}
{{ 'string with \'quotes\'' }}
---
(template
  (variable (expression (string_literal)))
  (variable (expression (string_literal)))
  (variable (expression (string_literal)))
  (variable (expression (string_literal))))

==================
string_filter
==================
{{ "string"|filter }}
{{ 'string'|filter }}
---
(template
  (variable (expression (string_literal) (filter (identifier))))
  (variable (expression (string_literal) (filter (identifier)))))


==================
string_filter_with_everything
==================
{{ "string with \"quotes\""|filter|filter:argument|filter:argument.attr|filter:"quoted argument" }}
---
(template
  (variable
    (expression
      (string_literal)
        (filter (identifier))
        (filter (identifier) (filter_argument (identifier)))
        (filter (identifier) (filter_argument (attribute_path (identifier) (identifier))))
        (filter (identifier) (filter_argument (string_literal))))))
